<resources>
    <string name="app_name">aplicativoCadastroLoginRealm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="text_intro_we_deliver">We deliver water at any point the Earth in 30 minutes</string>
    <string name="water_delivery">Water delivery</string>
    <string name="wwater">wwater</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="create_account">Create Account</string>
    <string name="account">account</string>
    <string name="create">create</string>
    <string name="welcome">Welcome</string>
    <string name="forgot_password">Forgot password?</string>
</resources>