<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.TelaIntroducao"
    android:background="#1879C6">

    <ImageView
        android:id="@+id/image_arrow_back"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_arrow_back"
        android:layout_margin="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginStart="35dp"
        android:textSize="30sp"
        android:fontFamily="sans-serif-light"
        app:layout_constraintBottom_toTopOf="@id/account"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginStart="35dp"
        android:textSize="30sp"
        android:fontFamily="sans-serif-light"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintBottom_toTopOf="@id/edit_text_name"/>


    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:fontFamily="sans-serif-thin"
        android:gravity="start"
        android:hint="@string/name"
        android:drawableLeft="@drawable/ic_account"
        android:inputType="textPersonName"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/edit_text_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:fontFamily="sans-serif-thin"
        android:gravity="start"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/edit_text_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:fontFamily="sans-serif-thin"
        android:gravity="start"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_lock"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toTopOf="@id/button_log_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginHorizontal="35dp"
        android:paddingVertical="16dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@id/button_log_in"/>
    <Button
        android:id="@+id/button_log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:layout_marginHorizontal="35dp"
        android:layout_marginBottom="35dp"
        android:paddingVertical="16dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>