<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.TelaIntroducao"
    android:background="#1879C6">

    <TextView
        android:id="@+id/text_wwater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wwater"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:padding="16dp"
        android:textSize="20sp"
        android:fontFamily="sans-serif-light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text_intro_water_delivery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/water_delivery"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="30sp"
        android:fontFamily="sans-serif-thin"
        android:gravity="start"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/text_intro_we_deliver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/text_intro_we_deliver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_intro_we_deliver"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:fontFamily="sans-serif-thin"
        android:gravity="start"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/button_log_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/button_log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:layout_marginHorizontal="35dp"
        android:paddingVertical="16dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@id/button_sign_up"/>
    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginHorizontal="35dp"
        android:layout_marginBottom="35dp"
        android:paddingVertical="16dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>